redux setup completed

--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ VITE_MESSAGING_SENDER_ID=18698078641
 
 VITE_APP_ID=1:18698078641:web:ceaf0cd5e5eaa748dcd590
 
-VITE_SERVER='Your Backend Server URl'
+VITE_SERVER=http://localhost:4000
 
 VITE_STRIPE_KEY='Stripe Publishable Key'
