--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.5",
     "chart.js": "^4.4.4",
     "firebase": "^10.13.0",
+    "framer-motion": "^11.3.31",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
